Time: 3 ms (36.15%), Space: 44.9 MB (33.05%) - LeetHub